--- a/src/app/OrderZapp/oz/views/oz.product.view.tpl.html
+++ b/src/app/OrderZapp/oz/views/oz.product.view.tpl.html
@@ -1,4 +1,4 @@
-<br> <div class = "mainOrderContainer" ng-if =  "products.length > 0">
+<br> <div class = "mainOrderContainer" ng-if =  "products.length > 0 && showSOrderView === 0 && controlWallView === 1">
         <div ng-repeat = "product in products">
           <div class = "highlighrOrderContainer">
         	<div class = "subOrderContainer" class = "fontsize">
