Feature : Manage Product - cancel api calls

--- a/src/app/ProviderWall/ManageProduct/views/oz.providerContent.manageProduct.tpl.html
+++ b/src/app/ProviderWall/ManageProduct/views/oz.providerContent.manageProduct.tpl.html
@@ -349,7 +349,8 @@
 		            <tr>
 		            <td colspan="4">
 		           	  <a   ng-click="addProduct(editMode.editStatus); " class="btn btn-primary   pull-right prodo-margin5"   ><i class="fa fa-floppy-o"></i>  &nbsp; Save</a>
-		              <a class="btn btn-default   pull-right prodo-margin5"  ng-click="init(); disableEditor(); getAllProducts(selectedBranchId, selectedproviderid);" > <i class="glyphicon glyphicon-remove"></i> &nbsp; Cancel </a>
+		              <!-- <a class="btn btn-default   pull-right prodo-margin5"  ng-click="init(); disableEditor(); getAllProducts(selectedBranchId, selectedproviderid);" > <i class="glyphicon glyphicon-remove"></i> &nbsp; Cancel </a> -->
+		                <a class="btn btn-default   pull-right prodo-margin5"  ng-click=" disableEditor(); " > <i class="glyphicon glyphicon-remove"></i> &nbsp; Cancel </a>
 		            </td>
 		          </tr>
 		        
