placeholder added to user tags

--- a/src/app/OrderZapp/oz/views/oz.userdefined.tags.tpl.html
+++ b/src/app/OrderZapp/oz/views/oz.userdefined.tags.tpl.html
@@ -2,7 +2,7 @@
 
 <div class = 'container'>
     <div>
-        <textarea class = 'form-control' ng-model = ' newTagsToBeSent' style = 'width : 100%;margin : 9px;'></textarea>
+        <textarea class = 'form-control' ng-model = ' newTagsToBeSent' style = 'width : 100%;margin : 9px;' placeholder = 'Add tags separated by comma '></textarea>
         <button class = 'btn btn-info' ng-click = 'insertProductTags()' style = "margin : 5px; float : right">Submit</button>
     </div>
 
