css adjusted admin

--- a/src/app/OrderZapp/oz/views/oz.sidebar.search.tpl.html
+++ b/src/app/OrderZapp/oz/views/oz.sidebar.search.tpl.html
@@ -40,11 +40,11 @@
       <br>
       <div style="margin:5px auto;" class="user-counter">
         <p style="letter-spacing:1px; text-transform:uppercase;font-size:13px; font-weight:bold; " class="text-muted">User</p>
-        <div oz-clock class="zoomCssControlClock clock " style="width:250%;left:-180px;top:-30px;" current-value = 'customers' ></div>
-      </div>
+        <div oz-clock class="zoomCssControlClock clock " style="width:287%;left:-100%;top:-30px;" current-value = 'customers' ></div>
+      </div2
       <div style="margin:5px auto;" class="user-counter">
         <p style="letter-spacing:1px; text-transform:uppercase;font-size:13px; font-weight:bold;" class="text-muted">Order</p>
-        <div oz-clock class="zoomCssControlClock clock" current-value = 'orders' style="width:250%;left:-180px;top:-30px;" ></div>
+        <div oz-clock class="zoomCssControlClock clock" current-value = 'orders' style="width:287%;left:-100%;top:-30px;" ></div>
       </div>
     </div>
   </div>
