Fature : Handle Manage providers if order configuration not available

--- a/src/app/ProviderWall/ManageSeller/views/oz.seller.manage.tpl.html
+++ b/src/app/ProviderWall/ManageSeller/views/oz.seller.manage.tpl.html
@@ -1,4 +1,16 @@
 <div style="border: 1px solid #EEE8E8; border-radius: 6px;" class="">
+
+<div ng-hide="order_status_list" style="padding:40px; opacity: .8; margin:40px; margin-bottom: 1px; color: rgb(80, 74, 74);background-color:#F1F1F1; letter-spacing: 1px;" class="row">
+      <div class="col-md-12">
+        <div class="no-message">
+          <center>
+            <p style="font-size: 14px;">Order configurations not found</p>      
+            <p style="font-size: 12px;"> Please contact your admin to add Order Configurations</p>
+          </center>
+        </div>
+      </div>
+ </div>
+
 	<div  ng-show ="!addprovider"  style="margin:10px auto; padding: 40px; padding-bottom:0px;" class="row">
 		<div class="col-md-10">
 			<p style="font-size:14px; letter-spacing:1px; word-space:1px;" class="text-justify">To add seller to your account, please click on <strong>'Add Seller'</strong> button.</p>
