Feature: Single branch right margin , provider change  jump issue resolved

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -67,7 +67,7 @@
           </li>
           <li ng-show="branches.length == 1">
             <div style="margin-left: 20px; padding:3px;">
-              <span > Branch:&nbsp;&nbsp;</span><span style="color: #599FD6;">{{branches[0].branchname}}  </span>
+              <span > Branch:&nbsp;&nbsp;</span><span style="color: #599FD6; padding-right: 25px;">{{branches[0].branchname}}  </span>
             </div>
           </li>
           <li class="dropdown">
