Feature: Seler to Seller , Manage product - messaging if no configs

--- a/src/app/ProviderWall/ManageProduct/views/oz.providerContent.manageProduct.tpl.html
+++ b/src/app/ProviderWall/ManageProduct/views/oz.providerContent.manageProduct.tpl.html
@@ -340,7 +340,7 @@
 
                        <span class="bold"> Configurations : </span>
                          <p>	<em>
-                       No configurations for this category , Please contact  your admin to add configurations
+                       No configurations defined for category - {{category.categoryname}}. Please contact  your admin to add product configurations 
 						</em></p>
                        </td>
                    </tr>
