--- a/src/app/ProviderWall/ManageSeller/views/oz.seller.manage.tpl.html
+++ b/src/app/ProviderWall/ManageSeller/views/oz.seller.manage.tpl.html
@@ -199,7 +199,7 @@
 							</div>
 
 							<div id="oz-signup-input-group" class="input-group">
-						  	<dt>Seler Name</dt>
+						  	<dt>Seller Name</dt>
 						  	<dd>
 						  		<input type="text" name="editsellername" class="form-control" ng-model="editseller.providername" placeholder="name" required>
 						  		<small style="color:red;" ng-show="((form.editSellerForm.editsellername.$dirty && form.editSellerForm.editsellername.$invalid) || (form.editSellerForm.editsellername.$invalid && form.editSellerForm.submitted))">*Please enter seller name.</small>
@@ -207,7 +207,7 @@
 							</div>
 
 							<div id="oz-signup-input-group" class="input-group">
-						  	<dt>Seler Code</dt>
+						  	<dt>Seller Code</dt>
 						  	<dd>
 						  		<input type="text" name="editsellercode" class="form-control" ng-model="editseller.providercode" placeholder="code" required>
 						  		<small style="color:red;" ng-show="((form.editSellerForm.editsellercode.$dirty && form.editSellerForm.editsellercode.$invalid) || (form.editSellerForm.editsellercode.$invalid && form.editSellerForm.submitted))">*Please enter seller code.</small>
@@ -215,7 +215,7 @@
 						  </div>
 
 							<div id="oz-signup-input-group" class="input-group">
-						  	<dt>Seler Description</dt>
+						  	<dt>Seller Description</dt>
 						  	<dd>
 						  		<textarea rows="5" name="editsellerdescription" type="text" class="form-control" ng-model="editseller.providerdescription" placeholder="description" required></textarea>
 						  		<small style="color:red;" ng-show="((form.editSellerForm.editsellerdescription.$dirty && form.editSellerForm.editsellerdescription.$invalid) || (form.editSellerForm.editsellerdescription.$invalid && form.editSellerForm.submitted))">*Please enter seller description.</small>
