--- a/src/app/ProviderWall/ManageSeller/views/oz.seller.manage.tpl.html
+++ b/src/app/ProviderWall/ManageSeller/views/oz.seller.manage.tpl.html
@@ -69,7 +69,7 @@
 					</div>
 
 					<div id="oz-signup-input-group" class="input-group">
-				  	<input name="servicetaxno" type="text" class="form-control" ng-model="addseller.servicetaxno" placeholder="service tax no" required />
+				  	<input name="servicetaxno" type="text" class="form-control" ng-model="addseller.servicetaxno" placeholder="service tax no"  />
 				  	<small style="color:red;" ng-show="((form.addSellerForm.servicetaxno.$dirty && form.addSellerForm.servicetaxno.$invalid) || (form.addSellerForm.servicetaxno.$invalid && form.addSellerForm.submitted))">*Please enter seller Service Tax no.</small>
 					</div>
 
@@ -137,7 +137,7 @@
 						<p><em>VAT/TINO:</em>&nbsp;&nbsp;
 							<span ng-show="provider.tax.tino">{{provider.tax.tino}}</span> 
 						</p>
-						<p><em>Service Tax #:</em>&nbsp;&nbsp;
+						<p ng-show="provider.tax.servicetaxno"><em>Service Tax #:</em>&nbsp;&nbsp;
 							<span ng-show="provider.tax.servicetaxno">{{provider.tax.servicetaxno}}</span> 
 						</p>
 						<p ng-show="provider.orderprocess_configuration"><em>Order Process Configuration:</em>
@@ -233,7 +233,7 @@
 							<div id="oz-signup-input-group" class="input-group">
 						  	<dt>Service Tax #</dt>
 						  	<dd>
-						  		<input name="editservicetaxno" type="text" class="form-control" ng-model="editseller.tax.servicetaxno" placeholder="sevice tax no" required />
+						  		<input name="editservicetaxno" type="text" class="form-control" ng-model="editseller.tax.servicetaxno" placeholder="sevice tax no"  />
 						  		<small style="color:red;" ng-show="((form.editSellerForm.editservicetaxno.$dirty && form.editSellerForm.editservicetaxno.$invalid) || (form.editSellerForm.editservicetaxno.$invalid && form.editSellerForm.submitted))">*Please enter seller Service Tax no.</small>
 						  	</dd>	
 							</div>
